# corrosive_agents

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  deny.toml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: manifest_verify.rs  vector_search.rs
docs/: TUTORIAL.md
examples/: a2a_delegation.rs  agent.json  agent_from_json.rs  build_agent.rs  interactive_chat.rs  serve.rs  serve_grpc.rs  sign_and_verify.rs  tool_calling.rs  vector_rag.rs
proto/: agent.proto
src/: a2a.rs  auth.rs  error.rs  identity.rs  lib.rs  tls.rs  trust.rs  x509.rs
src/agent/: builder.rs  manifest.rs  mod.rs  runtime.rs
src/grpc/: mod.rs  pb.rs
src/llm/: mod.rs  nvidia.rs  types.rs  usage.rs
src/mcp/: client.rs  mod.rs
src/server/: mod.rs  rest.rs  ws.rs
src/session/: memory.rs  mod.rs  redis.rs  sqlite.rs
src/skills/: mod.rs
src/vector/: chunk.rs  memory.rs  mod.rs  pg.rs  pinecone.rs  qdrant.rs
tests/: a2a_and_sessions.rs  agent_integration.rs  tools_and_policy.rs
