[package]
name = "corrosive_agents"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
authors = ["Kalanamith <gayanworks@gmail.com>"]
description = "Build verifiable, interactive AI agents powered by NVIDIA Nemotron free LLM models — MCP, skills, Ed25519 identity, REST/WebSocket/gRPC transports, and pluggable vector stores (Pinecone, Qdrant, custom)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tapiocaboy/corrosive_agents"
documentation = "https://docs.rs/corrosive_agents"
readme = "README.md"
keywords = ["agent", "llm", "nemotron", "mcp", "ai"]
categories = ["asynchronous", "api-bindings", "web-programming"]
exclude = [".env", ".github/", "TODO.md", "tools/"]

[features]
default = ["server"]
## REST + WebSocket serving via axum.
server = ["dep:axum"]
## gRPC serving via tonic (protobuf code is vendored; no protoc needed).
grpc = ["dep:tonic", "dep:prost"]
## Pinecone vector store backend (REST API).
pinecone = []
## Qdrant vector store backend (REST API).
qdrant = ["uuid/v5"]
## SQLite-backed persistent session store.
sqlite-sessions = ["dep:rusqlite"]
## Redis-backed persistent session store.
redis-sessions = ["dep:redis"]
## Everything.
full = [
    "server",
    "grpc",
    "pinecone",
    "qdrant",
    "sqlite-sessions",
    "redis-sessions",
]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "process", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"
semver = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

# feature = "server"
axum = { version = "0.8", features = ["ws"], optional = true }

# feature = "grpc"
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

# feature = "sqlite-sessions"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# feature = "redis-sessions"
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
], optional = true }

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "build_agent"

[[example]]
name = "agent_from_json"

[[example]]
name = "interactive_chat"

[[example]]
name = "sign_and_verify"

[[example]]
name = "vector_rag"

[[example]]
name = "serve"
required-features = ["server"]

[[example]]
name = "a2a_delegation"
required-features = ["server"]

[[example]]
name = "serve_grpc"
required-features = ["grpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
